# Snake-wasm

./: .gitignore  project.code-workspace
snake-frontend/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
snake-frontend/src/: index.html
snake-frontend/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  consts.ts
snake-frontend/src/app/utils/: date.ts
snake-wasm/: Cargo.toml  build.sh
snake-wasm/src/: lib.rs
