[package]
name = "snake_webasm"
version = "0.1.0"
edition = "2021"
path = "snake-wasm"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.74"
wee_alloc = "0.4.5"
rand = "0.8.3"
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib"]